--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>19.1.1</version>
+		<version>24.1.0</version>
 		<relativePath />
 	</parent>
 	<artifactId>scijava-parallel-examples</artifactId>
@@ -90,7 +90,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.scijava</groupId>
-			<artifactId>scijava-parallel</artifactId>
+			<artifactId>scijava-parallel-imagej-server</artifactId>
 			<version>0.1.1-SNAPSHOT</version>
 			<exclusions>
 			<exclusion>
@@ -101,12 +101,30 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
 			</exclusion>
+			<exclusion>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+			</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej-server</artifactId>
-			<version>0.1.3-SNAPSHOT</version>
+			<version>0.1.3.1-SNAPSHOT</version>
+			<exclusions>
+			<exclusion>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+			</exclusion>
+			<exclusion>
+				<groupId>org.slf4j</groupId>
+				<artifactId>log4j-over-slf4j</artifactId>
+			</exclusion>
+			<exclusion>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+			</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
